# demo-python-django-celery

./: .env.example  .gitattributes  README.md  pyproject.toml  requirements.txt
app/: db.sqlite3
app/core/: celery.py  settings.py  urls.py  views.py
app/module/: admin.py  apps.py  helpers.py  models.py  urls.py  views.py
app/module/migrations/: 0001_initial.py  0002_alter_article_options_article_slug.py  0003_image.py  0004_rename_image_photo_alter_photo_options.py  0005_article_end_date_article_start_date.py  0006_remove_article_end_date_remove_article_start_date.py
app/tasks/: tasks.py
app/templates/: about.html  article.html  detail.html  index.html  navbar.html  static.html
app/templates/example/: form.html  login.html  table.html
certs/: localhost.crt  localhost.key
docker/: .dockerignore  Dockerfile  docker-compose.yml
